add posts function

--- a/app/views/account/posts/index.html.erb
+++ b/app/views/account/posts/index.html.erb
@@ -6,7 +6,7 @@
     <thead>
       <tr>
         <th> Content </th>
-        <th> Group Name </th>
+        <th> Product Name </th>
         <th> Last Update </th>
         <th colspan="2"></th>
       </tr>
@@ -16,7 +16,8 @@
       <% @posts.each do |post| %>
         <tr>
           <td> <%= post.content %> </td>
-          <td> <%= post.product.title %> </td>
+          <!-- <td> <%= post.product.title %> </td> -->
+          <td> <%= link_to(post.product.title, product_path(post.product, post)) %></td>
           <td> <%= post.updated_at %> </td>
           <td> <%= link_to('Edit', edit_product_post_path(post.product, post), class: "btn btn-default btn-xs") %></td>
           <td> <%= link_to('Delete', product_post_path(post.product, post), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs") %></td>
