--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,7 +27,29 @@
           </div>
         </div>
         <div id="review" class="tab-pane fade">
-          <p>暂无评测</p>
+          <!-- <p>暂无评测</p> -->
+          <table class="table">
+            <thead>
+              <tr>
+                <th>评测标题</th>
+                <th>发表者</th>
+                <th>发表时间</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @reviews.each do |review| %>
+                <tr>
+                  <td><%= review.title %></td>
+                  <td><%= review.user.email %></td>
+                  <td><%= review.created_at %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <%= link_to("Write a Review", new_product_review_path(@product), class: "btn btn-default pull-right")%>
+          <div class="text-center">
+            <%= will_paginate @reviews %>
+          </div>
         </div>
         <div id="post" class="tab-pane fade">
           <table class="table">
