--- a/app/views/account/reviews/index.html.erb
+++ b/app/views/account/reviews/index.html.erb
@@ -16,7 +16,7 @@
       <% @reviews.each do |review| %>
         <tr>
           <td> <%= review.title %> </td>
-          <td> <%= review.product.title %> </td>
+          <td> <%= link_to(review.product.title, product_path(review.product, review)) %></td>
           <td> <%= review.updated_at %> </td>
           <td> <%= link_to('Edit', edit_product_review_path(review.product, review), class: "btn btn-default btn-xs") %></td>
           <td> <%= link_to('Delete', product_review_path(review.product, review), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs") %></td>
