--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,7 @@
             <tbody>
               <% @reviews.each do |review| %>
                 <tr>
-                  <td><%= review.title %></td>
+                  <td><%= link_to(review.title, product_review_path(review.product, review)) %>
                   <td><%= review.user.email %></td>
                   <td><%= review.created_at %></td>
                 </tr>
