--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,7 +1,15 @@
 <div class="col-md-12">
-  <div class="group">
-    <%= link_to('Edit', edit_product_review_path(review.product, review), class: "btn btn-primary pull-right") %>
-  </div>
+  <hr>
   <h2><%= @review.title %></h2>
-  <p><%= @reviews.body %></p>
+  <hr>
+  <p><%= @review.body %></p>
+  <hr>
+  <div class="group">
+    <%= link_to('Back', url_for(:back), class: "btn btn-primary") %>
+    <% if current_user && current_user == @review.user %>
+      <%= link_to('Edit', edit_product_review_path(@review.product, @review), class: "btn btn-primary") %>
+      <%= link_to('Delete', product_review_path(@review.product, @review), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary") %>
+    </div>
+  <% end %>
+  <hr>
 </div>
