--- a/app/views/account/reviews/index.html.erb
+++ b/app/views/account/reviews/index.html.erb
@@ -15,7 +15,7 @@
     <tbody>
       <% @reviews.each do |review| %>
         <tr>
-          <td> <%= review.title %> </td>
+          <td> <%= link_to(review.title, product_review_path(review.product, review)) %></td>
           <td> <%= link_to(review.product.title, product_path(review.product, review)) %></td>
           <td> <%= review.updated_at %> </td>
           <td> <%= link_to('Edit', edit_product_review_path(review.product, review), class: "btn btn-default btn-xs") %></td>
