add public/hidden button

--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -22,6 +22,10 @@
       <%= f.input :price%>
     </div>
 
+    <div class="group">
+      <%= f.input :is_hidden %>
+    </div>
+
     <% if @product.image.present? %>
       <span>present image</span>
       <br>
