--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -38,6 +38,11 @@
           <% end %>
       </div>
 
+      <div class="row">
+        <%= render_product_status(product) %>
+      </div>
+
+
 
     </div>
     <% end %>
