--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -22,10 +22,14 @@
     </div>
 
     <div class="group">
+      <%= f.input :is_hidden %>
+    </div>
+
+    <div class="group">
       <%= f.input :image, as: :file %>
     </div>
 
-      <%= f.submit "提交", class:"btn btn-danger",  data: {disable_with: "Submitting..."} %>
+    <%= f.submit "提交", class:"btn btn-danger",  data: {disable_with: "Submitting..."} %>
 
   <% end %>
 </div>
