--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -37,9 +37,13 @@
           <i class="glyphicon glyphicon-trash remove_shopping_cart"></i>
           <% end %>
       </div>
-
+      </br>
       <div class="row">
-        <%= render_product_status(product) %>
+        <% if product.is_hidden %>
+          <%= link_to("Publish", publish_admin_product_path(product) , :method => :post, class: "item-remove") %>
+        <% else %>
+          <%= link_to("Hide", hide_admin_product_path(product), :method => :post,  class: "item-remove") %>
+        <% end %>
       </div>
 
 
