--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -3,23 +3,33 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <th>#</th>
-      <th>标题</th>
+      <th>序号</th>
+      <th>评测标题</th>
+      <th>评测产品</th>
       <th>评测人</th>
+      <th>管理选项</th>
       <th>发表时间</th>
     </tr>
   </thead>
   <tbody>
-    <% @orders.each do |order| %>
+    <% @reviews.each do |review| %>
       <tr>
-        <h1><%= link_to(review.title, product_review_path(review.product, review)) %></h1>
+        <td> <%= review.id %> </td>
+        <td> <%= link_to(review.title, product_review_path(review.product, review)) %></td>
+        <td> <%= link_to(review.product.title, product_path(review.product, review)) %></td>
         <td> <%= review.user.email %> </td>
-        <td> <%= review.created_at %> </td>
-        <% if current_user && current_user == review.user %>
-          <%= link_to('Edit', edit_product_review_path(review.product, review), class: "btn btn-default btn-xs pull-right") %>
-          <%= link_to('Delete', product_review_path(review.product, review), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs pull-right") %>
-        <% end %>
-      <% end %>
+        <td>
+          <% if current_user && current_user == review.user %>
+            <%= link_to edit_product_review_path(review.product, review), class: "item-remove" do %>
+            <i class="glyphicon glyphicon-edit remove_shopping_cart"></i>
+            <% end %>
+
+            <%= link_to product_review_path(review.product, review), :method => :delete, data: { confirm: "Are you sure?" }, class: "item-remove" do %>
+            <i class="glyphicon glyphicon-trash remove_shopping_cart"></i>
+            <% end %>
+          <% end %>
+       </td>
+       <td> <%= review.created_at.to_s(:long) %> </td>
       </tr>
     <% end %>
   </tbody>
