--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -9,5 +9,6 @@
     <div class="form-actions">
       <%= f.submit "Submit", disable_with: "Submiting...", class: "btn btn-primary"%>
     </div>
+    <%= f.input :is_hidden %>
   <% end %>
 </div>
