--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -6,6 +6,7 @@
       <%= f.input :title, input_html: { class: "form-control"} %>
       <%= f.input :body, input_html: { class: "form-control"} %>
     </div>
+    <%= f.input :is_hidden %>
     <div class="form-actions">
       <%= f.submit "Submit", disable_with: "Submiting...", class: "btn btn-primary"%>
     </div>
