--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -144,6 +144,11 @@
     </div>
 
     <div class="col-md-3 col-sm-4">
+      <aside class="rate_sidebar">
+        <h2>评分区</h2>
+        <p>待添加</p>
+      </aside>
+
       <aside class="shop_sidebar">
         <div class="item-price">
           <h2>¥ <%= @product.price %></h2>
