--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -124,6 +124,17 @@
   padding: 2em;
   text-align: center;
   border-radius: 1.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.rate_sidebar {
+  background-color: #fff;
+  display: block;
+  padding: 2em;
+  text-align: center;
+  border-radius: 1.5em;
+  margin-bottom: 1em;
 }
 
 .item-price h2 {
