--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -57,31 +57,19 @@
                   <% @reviews.each do |review| %>
                   <div class="post-heading">
                     <div class="pull-left image">
-                        <img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
+                        <img src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-25-blue-creature-icon.png" class="img-circle avatar" alt="user profile image">
                     </div>
                     <div class="pull-left meta">
                         <div class="title h5">
                             <b>
                               <%= review.user.email %> 发表《 <%= link_to(review.title, product_review_path(review.product, review)) %>》</b>
                         </div>
-                        <h6 class="text-muted time"><%= review.created_at %></h6>
+                        <h6 class="text-muted time"><%= review.created_at.strftime("%d %b. %Y") %></h6>
                     </div>
                 </div><!-- post-heading -->
 
                 <div class="article">
-
-                  <% if review.body.length > 250 %>
-                    <%= truncate(review.body, length:250) %>
-                    <%= link_to '...Read more', '', class: "read-more-#{review.id}" %>
-                    <script>
-                      $('.read-more-<%= review.id %>').on('click', function(e) {
-                        e.preventDefault()
-                        $(this).parent().html('<%= escape_javascript markdown(review.body) %>')
-                      })
-                    </script>
-                  <% else %>
-                    <p><%= markdown(review.body) %></p>
-                  <% end %>
+                  <p><%= markdown(review.body) %></p>
 
                 </div>
 
@@ -113,14 +101,14 @@
                   <% @posts.each do |post| %>
                     <div class="post-heading">
                       <div class="pull-left image">
-                          <img src="http://bootdey.com/img/Content/user_1.jpg" class="img-circle avatar" alt="user profile image">
+                          <img src="http://okgqgpbx3.bkt.clouddn.com/blog/2017-02-25-blue-creature-icon.png" class="img-circle avatar" alt="user profile image">
                       </div>
                       <div class="pull-left meta">
                           <div class="title h5">
                               <b><%= post.user.email %></b>
                               说
                           </div>
-                          <h6 class="text-muted time"><%= post.created_at %></h6>
+                          <h6 class="text-muted time"><%= post.created_at.strftime("%d %b. %Y") %></h6>
                       </div>
                   </div><!-- post-heading -->
 
@@ -128,7 +116,8 @@
                       <div class="article">
                         <p><%= post.content %></p>
                       </div>
-                      <div class="stats">
+                    <!--
+                    <div class="stats">
                           <a href="#" class="btn btn-default stat-item">
                               <i class="fa fa-thumbs-up icon"></i>2
                           </a>
@@ -139,8 +128,8 @@
                             <%= link_to('编辑', edit_product_post_path(post.product, post), class: "btn btn-default btn-xs") %>
                             <%= link_to('删除', product_post_path(post.product, post), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default btn-xs") %>
                           <% end %>
-
                       </div>
+                    -->
                   </div><!-- post-description -->
                   <% end %>
 
