--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -180,13 +180,14 @@
             <% if current_user %>
               My Rate <%= rating_for @product, "visual_effects", star: 6 ,
               disable_after_rate: false,
+              star_path: '/images/ratyrate',
               cancel_place: 'right',
               target: '#hintDiv', cancel_hint: 'Cancel this vote!'
               %>
               <div id="hintDiv"></div>
-              
+
             <% else %>
-              <%= rating_for @product, "visual_effects", star: 6 %>
+              <%= rating_for @product, "visual_effects", star_path: '/images/ratyrate', star: 6 %>
             <% end %>
           </div>
         </div>
